--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- Here is a header section that holds the navigation and header links -->
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top navbar-transparent">
             <div class="container">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><svg height="45" viewBox="0 8 14 44" width="20"
+                        <a class="nav-link" href="index.html"><svg height="45" viewBox="0 8 14 44" width="20" fill="currentColor"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="m13.0729 17.6825a3.61 3.61 0 0 0 -1.7248 3.0365 3.5132 3.5132 0 0 0 2.1379 3.2223 8.394 8.394 0 0 1 -1.0948 2.2618c-.6816.9812-1.3943 1.9623-2.4787 1.9623s-1.3633-.63-2.613-.63c-1.2187 0-1.6525.6507-2.644.6507s-1.6834-.9089-2.4787-2.0243a9.7842 9.7842 0 0 1 -1.6628-5.2776c0-3.0984 2.014-4.7405 3.9969-4.7405 1.0535 0 1.9314.6919 2.5924.6919.63 0 1.6112-.7333 2.8092-.7333a3.7579 3.7579 0 0 1 3.1604 1.5802zm-3.7284-2.8918a3.5615 3.5615 0 0 0 .8469-2.22 1.5353 1.5353 0 0 0 -.031-.32 3.5686 3.5686 0 0 0 -2.3445 1.2084 3.4629 3.4629 0 0 0 -.8779 2.1585 1.419 1.419 0 0 0 .031.2892 1.19 1.19 0 0 0 .2169.0207 3.0935 3.0935 0 0 0 2.1586-1.1368z">
@@ -92,7 +92,7 @@
                                 </svg></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="checkout.html"><svg height="44" viewBox="0 8 14 44" width="14"
+                            <a class="nav-link" href="checkout.html"><svg height="44" viewBox="0 8 14 44" width="14" fill="currentColor"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="m11.3535 16.0283h-1.0205a3.4229 3.4229 0 0 0 -3.333-2.9648 3.4229 3.4229 0 0 0 -3.333 2.9648h-1.02a2.1184 2.1184 0 0 0 -2.117 2.1162v7.7155a2.1186 2.1186 0 0 0 2.1162 2.1167h8.707a2.1186 2.1186 0 0 0 2.1168-2.1167v-7.7155a2.1184 2.1184 0 0 0 -2.1165-2.1162zm-4.3535-1.8652a2.3169 2.3169 0 0 1 2.2222 1.8652h-4.4444a2.3169 2.3169 0 0 1 2.2222-1.8652zm5.37 11.6969a1.0182 1.0182 0 0 1 -1.0166 1.0171h-8.7069a1.0182 1.0182 0 0 1 -1.0165-1.0171v-7.7155a1.0178 1.0178 0 0 1 1.0166-1.0166h8.707a1.0178 1.0178 0 0 1 1.0164 1.0166z">
@@ -108,7 +108,7 @@
 
     <!-- Here is a sub-header section that holds messages  -->
 
-    <div class="messageTab text-center pt-3">
+    <div class="messageTab text-center">
         <span>Join Us this Earth Day by recycling your Apple devices. <a
                 href="https://www.apple.com/shop/trade-in#recycle" target="_self">Recycle for free <i
                     class="fa fa-angle-right"></i></a>
@@ -121,13 +121,15 @@
         <div class="heroes-wrapper">
             <div class="vision-pro-wrapper">
                 <a href="https://www.apple.com/apple-vision-pro/">
-                    <div class="Image-1">
-                        <video autoplay loop src="/images/small-video.mp4" width="100%" height="1000%"></video>
+                    <div>
+                        <video class="heroesVideo" autoplay loop src="/images/small-video.mp4" width="100%" height="1000%"></video>
                     </div>
                 </a>
             </div>
         </div>
     </main>
+
+
     <footer class="footer-wrapper">
         <div class="container">
             <div class="upper-text-container">
