--- a/registration.html
+++ b/registration.html
@@ -4,38 +4,97 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>My Apple</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/site.css" rel="stylesheet">
+    <link href="css/regsitration.css" rel="stylesheet">
 </head>
 
 <body>
 
+    <!-- Here is the header of our registration page -->
+
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="index.html">MIDO Beauty Supply</a>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html"><svg height="45" viewBox="0 8 14 44" width="20"
+                                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m13.0729 17.6825a3.61 3.61 0 0 0 -1.7248 3.0365 3.5132 3.5132 0 0 0 2.1379 3.2223 8.394 8.394 0 0 1 -1.0948 2.2618c-.6816.9812-1.3943 1.9623-2.4787 1.9623s-1.3633-.63-2.613-.63c-1.2187 0-1.6525.6507-2.644.6507s-1.6834-.9089-2.4787-2.0243a9.7842 9.7842 0 0 1 -1.6628-5.2776c0-3.0984 2.014-4.7405 3.9969-4.7405 1.0535 0 1.9314.6919 2.5924.6919.63 0 1.6112-.7333 2.8092-.7333a3.7579 3.7579 0 0 1 3.1604 1.5802zm-3.7284-2.8918a3.5615 3.5615 0 0 0 .8469-2.22 1.5353 1.5353 0 0 0 -.031-.32 3.5686 3.5686 0 0 0 -2.3445 1.2084 3.4629 3.4629 0 0 0 -.8779 2.1585 1.419 1.419 0 0 0 .031.2892 1.19 1.19 0 0 0 .2169.0207 3.0935 3.0935 0 0 0 2.1586-1.1368z">
+                                </path>
+                            </svg></a>
+                    </li>
+                </ul>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    aria-expanded="false" aria-label="Toggle navigation" fill="currentColor">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="products.html">Products</a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-fill w-100">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Store
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Shop</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Shop the Latest</a></li>
+                                <li><a class="dropdown-item" href="https://www.apple.com/mac/">Mac</a></li>
+                                <li><a class="dropdown-item" href="https://www.apple.com/ipad/">i Pad</a></li>
+                                <li><a class="dropdown-item" href="https://www.apple.com/iphone/">i Phone</a></li>
+                                <li><a class="dropdown-item" href="https://www.apple.com/watch/">Apple Watch</a></li>
+                                <li><a class="dropdown-item" href="https://www.apple.com/apple-vision-pro/">Vision</a>
+                                </li>
+                                <li><a class="dropdown-item"
+                                        href="https://www.apple.com/shop/accessories/all">Accessories</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="registration.html">Registration</a>
+                            <a class="nav-link" href="https://www.apple.com/mac/">Mac</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.apple.com/ipad/">iPad</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.apple.com/iphone/">iPhone</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.apple.com/watch/">Watch</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.apple.com/apple-vision-pro/">Vision</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Accessories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="registration.html">TV & Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login.html">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="checkout.html">checkout</a>
+                            <a class="nav-link" href="checkout.html"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                    height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                    <path
+                                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                                </svg></a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link" href="checkout.html"><svg height="44" viewBox="0 8 14 44" width="14"
+                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="m11.3535 16.0283h-1.0205a3.4229 3.4229 0 0 0 -3.333-2.9648 3.4229 3.4229 0 0 0 -3.333 2.9648h-1.02a2.1184 2.1184 0 0 0 -2.117 2.1162v7.7155a2.1186 2.1186 0 0 0 2.1162 2.1167h8.707a2.1186 2.1186 0 0 0 2.1168-2.1167v-7.7155a2.1184 2.1184 0 0 0 -2.1165-2.1162zm-4.3535-1.8652a2.3169 2.3169 0 0 1 2.2222 1.8652h-4.4444a2.3169 2.3169 0 0 1 2.2222-1.8652zm5.37 11.6969a1.0182 1.0182 0 0 1 -1.0166 1.0171h-8.7069a1.0182 1.0182 0 0 1 -1.0165-1.0171v-7.7155a1.0178 1.0178 0 0 1 1.0166-1.0166h8.707a1.0178 1.0178 0 0 1 1.0164 1.0166z">
+                                    </path>
+                                </svg></a>
+                        </li>
                     </ul>
 
                 </div>
@@ -43,46 +102,134 @@
         </nav>
     </header>
 
+    <!-- Here is the sub-header of our registration page -->
+
+    <div class="container regSubHeader hstack gap-4 pt-2">
+        <div>
+            <h3>Apple ID</h3>
+        </div>
+        <div class="p-2 ms-auto"><a href="login.html">Sign in</a></div>
+        <div class="p-2"><a href="registration.html">Create Your Apple ID</a></div>
+        <div class="p-2"><a href="https://appleid.apple.com/faq">FAQ</a></div>
+    </div>
+    <hr>
+
+    <!-- Here is the main content of our registration page -->
+
     <main>
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <h2>Registration</h2>
+                <div class="col text-center fw-bold fs-2">
+                    Create Your Apple ID
+                </div>
+                <div class="text-center">
+                    <p>One Apple ID is all you need to access all Apple Services.</p>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-2"></div>
+                <div class="col-md-4">
                     <form>
+                        <div class="row mb-3">
+                            <div class="col-md-6 mb-3">
+                                <input type="text" class="form-control" placeholder="First Name" id="First Name" aria-describedby="FirstName">
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <input type="text" class="form-control" placeholder="Last Name" id="Last Name" aria-describedby="LastName">
+                            </div>
+                        </div>
                         <div class="mb-3">
-                            <label for="username" class="form-label">User Name</label>
-                            <input type="text" class="form-control" id="username"
+                            <div class="col fs-6 fw-medium mb-3"><p>COUNTRY/REGION</p>
+                                <select class="form-select" id="floatingSelectGrid">
+                                    <option selected>Choose your Country</option>
+                                    <option value="1">Ethiopia</option>
+                                    <option value="2">Russia</option>
+                                    <option value="2">United States of America</option>
+                                    <option value="3">United Arab Emirates</option>
+                                  </select>
+                                </div>
+                            <div class="col mb-3">
+                            <input type="date" class="form-control" id="birthday" placeholder="Birthday"
                                 aria-describedby="emailHelp">
+                            </div>
                         </div>
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    <hr>
+                    <div class="mb-3">
+                        <input type="email" class="form-control" placeholder="name@example.com" id="exampleInputAppleID">
+                        <p>This will be your new Apple ID.</p>
+                    </div>
+                    <div class="mb-3">
+                        <input type="password" class="form-control" placeholder="Password" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3">
+                        <input type="password" class="form-control" id="passwordConfirm" placeholder="Confirm Password"
+                            aria-describedby="passwordConfirmHelp">
+                    </div>
+                    <hr>
+                    <div class="mb-3">
+                        <div class="col mb-3">
+                        <input type="number" class="form-control" id="Country" placeholder="Country Code"
+                            aria-describedby="CountryCode">
                         </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        <div class="col mb-3">
+                        <input type="number" class="form-control" id="phoneNumber" placeholder="Phone Number"
+                            aria-describedby="phoneNumber">
                         </div>
-                        <div class="mb-3">
-                            <label for="passwordConfirm" class="form-label">Confirm Password</label>
-                            <input type="password" class="form-control" id="passwordConfirm"
-                                aria-describedby="passwordConfirmHelp">
-                            <div id="emailHelp" class="form-text">Please type the same password again!</div>
+                        <div class="col mb-4">
+                            <p>
+                                Be sure to enter a phone number you can always access. It will be used to verify your identity any time you sign in on a new device or web browser. Messaging or data rates may apply.
+                            </p>
                         </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        <div class="col mb-3 d-flex gap-3">
+                            <div><p>Verify with:</p></div>
+                            <div class="form-check form-check-inline ms-auto">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">Text Message</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">Phone Call</label>
+                              </div>
                         </div>
+                    </div>
+                    <hr>
+                    <div class=" mb-3 form-check">
+                        <div class="col ">
+                            <p>
+                                How Did you hear about us?
+                            </p>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1">
+                                  Referral
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                                <label class="form-check-label" for="flexRadioDefault2">
+                                  Internet Ads
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
+                                <label class="form-check-label" for="flexRadioDefault3">
+                                  Social Media
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4" checked>
+                                <label class="form-check-label" for="flexRadioDefault4">
+                                  Search Engines 
+                                </label>
+                              </div>
+                        
+                    </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
+                <div class="col-md-2"></div>
                 <div class="col-md-2"></div>
             </div>
 
@@ -91,8 +238,46 @@
     </main>
 
 
-    <footer>
-
+    <footer class="footer-wrapper">
+        <div class="container">
+            <div class="my-apple-wrapper mt-5 pt-3">
+                More ways to shop: <a href="#">Find an Apple Store</a> or
+                <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
+            </div>
+            <div class="copyright-wrapper row">
+                <div class="
+                      copyright
+                      col-sm-12
+                      order-2
+                      col-md-8
+                      order-md-1
+                      col-lg-4
+                      order-lg-1
+                    ">
+                    Copyright &copy; 2024 Apple Inc. All rights reserved.
+                </div>
+                <div class="footer-links-terms hstack col-sm-12 order-3 col-lg-6 order-lg-2">
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Use</a></li>
+                        <li><a href="#">Sales and Refunds</a></li>
+                        <li><a href="#">Legal</a></li>
+                        <li><a href="#">Site Map</a></li>
+                    </ul>
+                </div>
+                <div class="
+                      footer-country
+                      col-sm-12
+                      order-1
+                      col-md-4
+                      order-md-2
+                      text-md-right
+                      col-lg-2
+                      order-lg-3">
+                    <div class="footer-country-name">United States</div>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
