--- a/registration.html
+++ b/registration.html
@@ -157,7 +157,7 @@
                     <hr>
                     <div class="mb-3">
                         <input type="email" class="form-control" placeholder="name@example.com" id="exampleInputAppleID">
-                        <p>This will be your new Apple ID.</p>
+                        <p class="card-text"><small class="text-body-secondary">This will be your new Apple ID.</small></p>
                     </div>
                     <div class="mb-3">
                         <input type="password" class="form-control" placeholder="Password" id="exampleInputPassword1">
@@ -177,9 +177,11 @@
                             aria-describedby="phoneNumber">
                         </div>
                         <div class="col mb-4">
-                            <p>
+                            <p class="card-text">
+                                <small class="text-body-secondary">
                                 Be sure to enter a phone number you can always access. It will be used to verify your identity any time you sign in on a new device or web browser. Messaging or data rates may apply.
                             </p>
+                        </small>
                         </div>
                         <div class="col mb-3 d-flex gap-3">
                             <div><p>Verify with:</p></div>
@@ -195,7 +197,7 @@
                     </div>
                     <hr>
                     <div class=" mb-3 form-check">
-                        <div class="col ">
+                        <div class="col">
                             <p>
                                 How Did you hear about us?
                             </p>
@@ -226,7 +228,9 @@
                               </div>
                         
                     </div>
+                    <div class=" text-center mt-5">
                         <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
                     </form>
                 </div>
                 <div class="col-md-2"></div>
