Completed products page

--- a/macproducts.html
+++ b/macproducts.html
@@ -204,7 +204,7 @@
           <div class="mainCards row mt-5 row-cols-1 row-cols-md-3 g-4">
             <div class="">
               <div class="card">
-                <a href="macproducts.html">
+                <a href="https://www.apple.com/shop/buy-mac">
                   <img
                     src="./images/store-card-13-mac-nav-202310.png"
                     class="card-img-top"
