--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/site.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 </head>
 
@@ -42,11 +43,11 @@
                                 Store
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Shop</a></li>
+                                <li><a class="dropdown-item" href="products.html">Shop</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Shop the Latest</a></li>
+                                <li><a class="dropdown-item" href="products.html">Shop the Latest</a></li>
                                 <li><a class="dropdown-item" href="https://www.apple.com/mac/">Mac</a></li>
                                 <li><a class="dropdown-item" href="https://www.apple.com/ipad/">i Pad</a></li>
                                 <li><a class="dropdown-item" href="https://www.apple.com/iphone/">i Phone</a></li>
@@ -76,7 +77,7 @@
                             <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Accessories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="registration.html">TV & Home</a>
+                            <a class="nav-link" href="https://www.apple.com/tv-home/">TV & Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login.html">Login</a>
