--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- Here is the header of our registration page -->
+    <!-- Here is the header of our login page -->
 
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
@@ -42,11 +42,11 @@
                                 Store
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Shop</a></li>
+                                <li><a class="dropdown-item" href="products.html">Shop</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Shop the Latest</a></li>
+                                <li><a class="dropdown-item" href="products.html">Shop the Latest</a></li>
                                 <li><a class="dropdown-item" href="https://www.apple.com/mac/">Mac</a></li>
                                 <li><a class="dropdown-item" href="https://www.apple.com/ipad/">i Pad</a></li>
                                 <li><a class="dropdown-item" href="https://www.apple.com/iphone/">i Phone</a></li>
@@ -76,7 +76,7 @@
                             <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Accessories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="registration.html">TV & Home</a>
+                            <a class="nav-link" href="https://www.apple.com/tv-home/">TV & Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login.html">Login</a>
@@ -103,7 +103,7 @@
         </nav>
     </header>
 
-    <!-- Here is the sub-header of our registration page -->
+    <!-- Here is the sub-header of our login page -->
 
     <div class="container loginSubHeader hstack gap-4 pt-2">
         <div>
@@ -115,7 +115,7 @@
     </div>
     <hr>
 
-    <!-- Here is the main content of our registration page -->
+    <!-- Here is the main content of our login page -->
 
     <main>
         <div class="container">
