--- a/registration.html
+++ b/registration.html
@@ -263,12 +263,12 @@
                 </div>
                 <div class="footer-links-terms hstack col-sm-12 order-3 col-lg-6 order-lg-2">
                     <ul>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Sales and Refunds</a></li>
-                        <li><a href="#">Legal</a></li>
-                        <li><a href="#">Site Map</a></li>
-                    </ul>
+                        <li class="px-2"><a href="#">Privacy Policy</a></li>
+                        <li class="px-2"><a href="#">Terms of Use</a></li>
+                        <li class="px-2"><a href="#">Sales and Refunds</a></li>
+                        <li class="px-2"><a href="#">Legal</a></li>
+                        <li class="px-2"><a href="#">Site Map</a></li>
+                      </ul>
                 </div>
                 <div class="
                       footer-country
