Completed the checkout page

--- a/macproducts.html
+++ b/macproducts.html
@@ -407,6 +407,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
     </main>
 
     <!-- Here is the footer of our mac products page -->
