--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Apple</title>
+    <link href="images/favicon.svg" rel="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
@@ -15,7 +16,7 @@
 
 <body>
 
-    <!-- Here is the header of our mac products page -->
+    <!-- Here is the header of our checkout page -->
 
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
@@ -145,7 +146,7 @@
                         <h5>I'll pick it up</h5>
                     </div>
                 </div>
-                
+
             </div>
             <hr>
 
@@ -233,9 +234,9 @@
                                 <div class="input-group has-validation">
                                     <input type="number" class="form-control" id="validationStreetAddress"
                                         aria-describedby="inputGroupPrepend" required>
-                                        <div class="valid-feedback">
-                                            Looks good!
-                                        </div>
+                                    <div class="valid-feedback">
+                                        Looks good!
+                                    </div>
                                     <div class="invalid-feedback">
                                         Please write your street address
                                     </div>
@@ -284,7 +285,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-check needs-validation mb-4" novalidate>
-                                    <input class="form-check-input" type="checkbox" id="gridCheck" >
+                                    <input class="form-check-input" type="checkbox" id="gridCheck">
                                     <label class="form-check-label" for="gridCheck">
                                         Save Shipping Information
                                     </label>
