--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Apple</title>
+    <link href="images/favicon.svg" rel="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -160,6 +161,7 @@
             </div>
     </main>
 
+    <!-- Here is the footer of our login page -->
 
     <footer class="footer-wrapper">
         <div class="container">
@@ -186,7 +188,7 @@
                         <li class="px-2"><a href="#">Sales and Refunds</a></li>
                         <li class="px-2"><a href="#">Legal</a></li>
                         <li class="px-2"><a href="#">Site Map</a></li>
-                      </ul>
+                    </ul>
                 </div>
                 <div class="
                       footer-country
