--- a/products.html
+++ b/products.html
@@ -117,6 +117,9 @@
 
     <main>
         <div class="container">
+
+            <!-- Here is the title section of the products page -->
+
             <div class="d-inline-flex justify-content-between">
                 <div class="col-lg-8 fs-1 fw-boldder lh-1 mt-5 px-5">
                     <b>Store.</b> The best way to buy the products you love.
@@ -132,7 +135,9 @@
                     </div>
                 </div>
             </div>
+
             <!-- Here are the main cards for our products -->
+
             <div>
                 <div class="mainCards row mt-5 row-cols-1 row-cols-md-3 g-4">
                     <div class="">
