--- a/login.html
+++ b/login.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="css/site.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
+
+    <!-- Run BEFORE page is finished loading -->
+    <script src="scripts/auth.js"></script>
 </head>
 
 <body>
@@ -74,13 +77,19 @@
                             <a class="nav-link" href="https://www.apple.com/apple-vision-pro/">Vision</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Accessories</a>
+                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">AirPods</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.apple.com/tv-home/">TV & Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login.html">Login</a>
+                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Entertainment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Accessories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Support</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="checkout.html"><svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -110,8 +119,7 @@
         <div>
             <h3>Apple ID</h3>
         </div>
-        <div class="p-2 ms-auto"><a href="login.html">Sign in</a></div>
-        <div class="p-2"><a href="registration.html">Create Your Apple ID</a></div>
+        <div class="p-2 ms-auto"><a href="registration.html">Create Your Apple ID</a></div>
         <div class="p-2"><a href="https://appleid.apple.com/faq">FAQ</a></div>
     </div>
     <hr>
@@ -149,6 +157,8 @@
                             Remember me
                         </label>
                     </div>
+                    <button class="btn btn-primary text-center d-block mx-auto mt-4 w-50" id="signInBtn">Sign In</button>
+                    <div id="messageDiv"></div>
                     <div class="col-md-12 mt-4 text-center logInforgotPassword">
                         <a href="https://iforgot.apple.com/password/verify/appleid">Forgot password?</a>
                         <i class="bi bi-arrow-up-right"></i>
