--- a/registration.html
+++ b/registration.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="css/site.css" rel="stylesheet">
     <link href="css/regsitration.css" rel="stylesheet">
+
+    <!-- Run BEFORE page is finished loading -->
+    <script src="scripts/auth.js"></script>
 </head>
 
 <body>
@@ -71,16 +74,19 @@
                             <a class="nav-link" href="https://www.apple.com/watch/">Watch</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/apple-vision-pro/">Vision</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Accessories</a>
+                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">AirPods</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.apple.com/tv-home/">TV & Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login.html">Login</a>
+                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Entertainment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Accessories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Support</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="checkout.html"><svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -111,7 +117,6 @@
             <h3>Apple ID</h3>
         </div>
         <div class="p-2 ms-auto"><a href="login.html">Sign in</a></div>
-        <div class="p-2"><a href="registration.html">Create Your Apple ID</a></div>
         <div class="p-2"><a href="https://appleid.apple.com/faq">FAQ</a></div>
     </div>
     <hr>
@@ -135,11 +140,11 @@
                     <form>
                         <div class="row mb-3">
                             <div class="col-md-6 mb-3">
-                                <input type="text" class="form-control" placeholder="First Name" id="First Name"
+                                <input type="text" class="form-control" placeholder="First Name" id="firstName" name="firstName"
                                     aria-describedby="FirstName">
                             </div>
                             <div class="col-md-6 mb-3">
-                                <input type="text" class="form-control" placeholder="Last Name" id="Last Name"
+                                <input type="text" class="form-control" placeholder="Last Name" id="lastName" name="lastName"
                                     aria-describedby="LastName">
                             </div>
                         </div>
@@ -161,8 +166,8 @@
                         </div>
                         <hr>
                         <div class="mb-3">
-                            <input type="email" class="form-control" placeholder="name@example.com"
-                                id="exampleInputAppleID">
+                            <input type="text" class="form-control" placeholder="name@example.com" name="email"
+                                id="email">
                             <p class="card-text"><small class="text-body-secondary">This will be your new Apple
                                     ID.</small></p>
                         </div>
@@ -171,7 +176,7 @@
                                 id="exampleInputPassword1">
                         </div>
                         <div class="mb-3">
-                            <input type="password" class="form-control" id="passwordConfirm"
+                            <input type="password" class="form-control" id="password" name="password"
                                 placeholder="Confirm Password" aria-describedby="passwordConfirmHelp">
                         </div>
                         <hr>
@@ -246,8 +251,8 @@
                             </div>
 
                         </div>
-                        <div class=" text-center mt-5">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                        <div class=" text-center mt-5" id="signUpMessageDiv">
+                            <button type="submit" id="signUpBtn" class="btn btn-primary">Submit</button>
                         </div>
                     </form>
                 </div>
@@ -307,6 +312,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="scripts/site.js"></script>
+    <script src="scripts/register.js"></script>
 </body>
 
 </html>
