--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
     <!-- Run BEFORE page is finished loading -->
+    <!-- Run BEFORE page is finished loading -->
+    <!-- Run BEFORE page is finished loading -->
+    <!-- Run BEFORE page is finished loading -->
+    <!-- Run BEFORE page is finished loading -->
+    <!-- Run BEFORE page is finished loading -->
+    <!-- Run BEFORE page is finished loading -->
+    <!-- Run BEFORE page is finished loading -->
     <script src="scripts/auth.js"></script>
 </head>
 
