Main Section bug fix

--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
     </header>
 
     <!-- Here is the main content of the index page -->
+    <!-- Here is the main content of the index page -->
 
     <main class="mt-5">
 
